Fix list item name wrapping - fix #160

--- a/css/components.css
+++ b/css/components.css
@@ -305,12 +305,14 @@ a:hover > .menu
         top: 50%;
         transform: translateY(-50%);
         margin-bottom: 0px;
+        white-space: nowrap;
 }
 
 .list__item__desc
 {
         font-size: 70%;
         color : #666;
+        white-space: nowrap;
 }
 
 .list__no-results
